@@ -13,13 +13,13 @@
 #define FUNC_CBESSEL_N(j,J)					\
   Complex cBessel_##J##n(int n, Complex z)	\
   {												\
-  int nn=1,kode=1;								\
-  Complex cy;									\
+  int nn,kode=1;								\
+  Complex cy; 									\
   int nz=0;										\
   float fnu;									\
-  int *ierr;									\
+  int ierr;									\
   fnu=n;										\
-  cbes##j##_(&z, &fnu, &kode, &nn, &cy, &nz, ierr);	\
+  cbes##j##_(&z, &fnu, &kode, &nn, &cy, &nz, &ierr);	\
   return(cy);										\
 }
 
@@ -29,8 +29,8 @@
 	int nn=1,kode=1;							\
 	Complex cy;									\
 	int nz=0;										\
-	int *ierr;										\
-	cbes##j##_(&z, &fnu, &kode, &nn, &cy, &nz, ierr);	\
+	int ierr;										\
+	cbes##j##_(&z, &fnu, &kode, &nn, &cy, &nz, &ierr);	\
 	return(cy);											\
   }
 
@@ -41,10 +41,10 @@
 	Complex cy;									\
 	int nz=0;									\
 	float fnu;									\
-	int *ierr;									\
+	int ierr;									\
 	m=i;											\
 	fnu=n;												\
-	cbesh_(&z, &fnu, &kode, &m, &nn, &cy, &nz, ierr);	\
+	cbesh_(&z, &fnu, &kode, &m, &nn, &cy, &nz, &ierr);	\
 	return(cy);											\
   }
 
@@ -54,8 +54,8 @@
 	int nn=1,kode=1,m=i;							\
 	Complex cy;										\
 	int nz=0;											\
-	int *ierr;											\
-	cbesh_(&z, &fnu, &kode, &m,&nn, &cy, &nz, ierr);	\
+	int ierr;											\
+	cbesh_(&z, &fnu, &kode, &m,&nn, &cy, &nz, &ierr);	\
 	return(cy);											\
   }
 
@@ -66,11 +66,11 @@
 	ZComplex cyr;										\
 	int nz=0;											\
 	double fnu;											\
-	int *ierr;											\
+	int ierr;											\
 	my_ZComplex z0,cyr0;								\
 	fnu=n;																\
 	z0=toMyZComplex(z);													\
-	zbes##j##_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, ierr); \
+	zbes##j##_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, &ierr); \
 	cyr=fromMyZComplex(cyr0);											\
 	return(cyr);														\
   }
@@ -81,27 +81,27 @@
 	int nn=1,kode=1;									\
 	ZComplex cyr;										\
 	my_ZComplex z0,cyr0;								\
-    int *ierr;											\
+    int ierr;											\
 	int nz=0;															\
 	z0=toMyZComplex(z);													\
-	zbes##j##_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, ierr); \
+	zbes##j##_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, &ierr); \
 	cyr=fromMyZComplex(cyr0);											\
 	return(cyr);														\
   }
 
 
 #define FUNC_ZBESSELH_N(i)									\
-  ZComplex zBessel_H##i##_n(int n, ZComplex z)				\
+  ZComplex zBessel_H##i##n(int n, ZComplex z)				\
   {															\
 	int nn=1,kode=1,m=i;									\
 	ZComplex cy;											\
 	int nz=0;												\
-    int *ierr;												\
+    int ierr;												\
 	double fnu;														\
 	my_ZComplex z0,cy0;												\
 	fnu=n;															\
 	z0=toMyZComplex(z);													\
-	zbesh_(&z0.re, &z0.im, &fnu, &kode, &m, &nn, &cy0.re, &cy0.im, &nz, ierr); \
+	zbesh_(&z0.re, &z0.im, &fnu, &kode, &m, &nn, &cy0.re, &cy0.im, &nz, &ierr); \
 	cy=fromMyZComplex(cy0);												\
 	return(cy);															\
   }
@@ -111,11 +111,11 @@
   {															\
 	int nn=1,kode=1,m=i;										\
 	ZComplex cy;												\
-    int *ierr;														\
+    int ierr;														\
 	int nz=0;														\
 	my_ZComplex z0,cy0;												\
 	z0=toMyZComplex(z);													\
-	zbesh_(&z0.re, &z0.im, &fnu, &kode, &m, &nn, &cy0.re, &cy0.im, &nz, ierr); \
+	zbesh_(&z0.re, &z0.im, &fnu, &kode, &m, &nn, &cy0.re, &cy0.im, &nz, &ierr); \
 	cy=fromMyZComplex(cy0);												\
 	return(cy);															\
   }
@@ -125,9 +125,9 @@ FUNC_CBESSELH_N(2);
 FUNC_CBESSELH(1);
 FUNC_CBESSELH(2);
 
-FUNC_CBESSEL_N(i,I);
-//FUNC_CBESSEL_N(y,Y);
 FUNC_CBESSEL_N(j,J);
+//FUNC_CBESSEL_N(y,Y);
+FUNC_CBESSEL_N(i,I);
 FUNC_CBESSEL_N(k,K);
 
 FUNC_CBESSEL(j,J);
@@ -154,9 +154,9 @@ Complex cAiry(Complex z)
 {
   int id=0;
   int kode=1,nz=0;
-  int *ierr;
+  int ierr;
   Complex ai;
-  cairy_(&z, &id, &kode, &ai, &nz, ierr);
+  cairy_(&z, &id, &kode, &ai, &nz, &ierr);
   return(ai);
 }
 
@@ -164,9 +164,9 @@ Complex cAirydz(Complex z)
 {
   int id=1;
   int kode=1,nz=0;
-  int *ierr;
+  int ierr;
   Complex ai;
-  cairy_(&z, &id, &kode, &ai, &nz, ierr);
+  cairy_(&z, &id, &kode, &ai, &nz, &ierr);
   return(ai);
 }
 
@@ -174,9 +174,9 @@ Complex cBiry(Complex z)
 {
   int id=0;
   int kode=1,nz=0;
-  int *ierr;
+  int ierr;
   Complex ai;
-  cbiry_(&z, &id, &kode, &ai, ierr);
+  cbiry_(&z, &id, &kode, &ai, &ierr);
   return(ai);
 }
 
@@ -184,9 +184,9 @@ Complex cbirydz(Complex z)
 {
   int id=1;
   int kode=1,nz=0;
-  int *ierr;
+  int ierr;
   Complex ai;
-  cbiry_(&z, &id, &kode, &ai, ierr);
+  cbiry_(&z, &id, &kode, &ai, &ierr);
   return(ai);
 }
 
@@ -195,10 +195,10 @@ Complex cBessel_Yn(int n, Complex z)
   int nn=1,kode=1;
   Complex cy,cwrk;
   int nz=0;
-  int *ierr;
+  int ierr;
   float fnu;
   fnu=n;
-  cbesy_(&z, &fnu, &kode, &nn, &cy, &nz, &cwrk,ierr);
+  cbesy_(&z, &fnu, &kode, &nn, &cy, &nz, &cwrk,&ierr);
   return(cy);
 }
 
@@ -206,9 +206,9 @@ Complex cBessel_Y(float fnu, Complex z)
 {
   int nn=1,kode=1;
   Complex cy,cwrk;
-  int *ierr;
+  int ierr;
   int nz=0;
-  cbesy_(&z, &fnu, &kode, &nn, &cy, &nz, &cwrk,ierr);
+  cbesy_(&z, &fnu, &kode, &nn, &cy, &nz, &cwrk,&ierr);
   return(cy);
 }
 
@@ -218,12 +218,12 @@ ZComplex zBessel_Yn(int n, ZComplex z)
   ZComplex cyr;
   my_ZComplex cwrk;
   int nz=0;
-  int *ierr;
+  int ierr;
   double fnu;
   my_ZComplex z0,cyr0;
   fnu=n;
   z0=toMyZComplex(z);\
-  zbesy_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, &cwrk.re, &cwrk.im,ierr);
+  zbesy_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, &cwrk.re, &cwrk.im, &ierr);
   cyr=fromMyZComplex(cyr0);\
   return(cyr);
 }
@@ -234,10 +234,10 @@ ZComplex zBessel_Y(double fnu, ZComplex z)
   ZComplex cyr;
   my_ZComplex cwrk;
   int nz=0;
-  int *ierr;
+  int ierr;
   my_ZComplex z0,cyr0;
   z0=toMyZComplex(z);\
-  zbesy_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, &cwrk.re, &cwrk.im,ierr);
+  zbesy_(&z0.re, &z0.im, &fnu, &kode, &nn, &cyr0.re, &cyr0.im, &nz, &cwrk.re, &cwrk.im,&ierr);
   cyr=fromMyZComplex(cyr0);\
   return(cyr);
 }
@@ -246,11 +246,11 @@ ZComplex zAiry(ZComplex z)
 {
   int id=0;
   int kode=1,nz=0;
-  int *ierr;
+  int ierr;
   ZComplex ai;
   my_ZComplex z0,ai0;
   z0=toMyZComplex(z);\
-  zairy_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, &nz, ierr);
+  zairy_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, &nz, &ierr);
   ai=fromMyZComplex(ai0);\
   return(ai);
 }
@@ -259,11 +259,11 @@ ZComplex zAirydz(ZComplex z)
 {
   int id=1;
   int kode=1,nz=0;
-  int *ierr;
+  int ierr;
   ZComplex ai;
   my_ZComplex z0,ai0;
   z0=toMyZComplex(z);\
-  zairy_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, &nz, ierr);
+  zairy_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, &nz, &ierr);
   ai=fromMyZComplex(ai0);\
   return(ai);
 }
@@ -272,11 +272,11 @@ ZComplex zBiry(ZComplex z)
 {
   int id=0;
   int kode=1;
-  int *ierr;
+  int ierr;
   ZComplex ai;
   my_ZComplex z0,ai0;
   z0=toMyZComplex(z);\
-  zbiry_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, ierr);
+  zbiry_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, &ierr);
   ai=fromMyZComplex(ai0);\
   return(ai);
 }
@@ -285,11 +285,11 @@ ZComplex zBirydz(ZComplex z)
 {
   int id=1;
   int kode=1;
-  int *ierr;
+  int ierr;
   ZComplex ai;
   my_ZComplex z0,ai0;
   z0=toMyZComplex(z);\
-  zbiry_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, ierr);
+  zbiry_(&z0.re, &z0.im, &id, &kode, &ai0.re, &ai0.im, &ierr);
   ai=fromMyZComplex(ai0);\
   return(ai);
 }
